--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,41 @@
 .text-verde {
-  color: #3aca07;
+  color: #3b8a6b;
 }
 
 .bg-verde {
-  background-color: #3aca07;
+  background-color: #3b8a6b;
 }
 
 .text-limao {
-  color: #c3ec21;
+  color: #01c38d;
 }
 
 .bg-limao {
-  background-color: #c3ec21;
+  background-color: #01c38d;
 }
 
 .text-verdao {
-  color: #497522;
+  color: #132d46;
 }
 
 .bg-verdao {
-  background-color: #497522;
+  background-color: #132d46;
 }
 
 .text-cinza {
-  color: #848c8c;
+  color: #696e79;
 }
 
 .bg-cinza {
-  background-color: #848c8c;
+  background-color: #696e79;
 }
 
 .text-escuro {
-  color: #1d1d1b;
+  color: #191e29;
 }
 
 .bg-escuro {
-  background-color: #1d1d1b;
+  background-color: #191e29;
 }
 
 .text-xs {
