ajuste de altura 1

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,13 @@
   margin: auto;
 }
 
+.divider-h {
+  background-color: white;
+  widht: 1px;
+  height: 90%;
+  margin: auto;
+}
+
 .impact {
   font-family: "Impact", sans-serif;
   font-weight: 400;
